# simple_cpu

./: .gitignore  ABI.md  ISA.md  README.md
assembler/: README.md  assembler.py  hello_loop.asm  install.bat  merc32-asm-2.0.0.vsix  package-lock.json  package.json  pyproject.toml  setup.py  test.asm  test_label_jump.asm  uninstall.bat
assembler/language-configuration/: language-configuration.json
assembler/scripts/: test-pseudo-instructions.js
assembler/snippets/: merc32-asm.json
assembler/src/: assembler.ts  assemblyRunner.ts  assemblyService.ts  compileModes.ts  configuration.ts  constants.ts  editor.ts  extension.ts  extensionCommands.ts  preprocessor.ts  types.ts
assembler/syntaxes/: merc32-asm.tmLanguage.json
example/: full_test.asm  full_test.v  full_test_include.asm  hello_world.asm  inst_test.asm  inst_test.v  intr_test.asm  intr_test.v  tb_uart_test.v  test.asm  tinyc_feature_test.asm  tinyc_feature_test.c  tinyc_feature_test.v  uart_test.asm  uart_test.v
merc32-vsce/: .vscodeignore  README.md  package.json
merc32-vsce/scripts/: test-c-compiler.js  test-pseudo-instructions.js
merc32-vsce/src/: assemblyRunner.ts  compilerService.ts  configuration.ts  (+7 more)
merc32_sim/: tb_apb_uart_behav.wcfg
rtl/: MERC32_top.v  apb_spi.v  apb_uart.v  core.v  core_isa_tb.v  core_tb.v  hello_world.v  inst_test.v  intc.v  lb2apb.v  lb2axi_lite.v  lb2drp.v  lb2wbc.v  s_axi_lite.v  simple_cpu.v  simple_cpu_tb.v  uart_debug.v  uart_rx.v  uart_top.v  uart_tx.v
sass-vscode/: README.md  package.json  tsconfig.json
sim/: instr_test.v  simple_cpu_tb.v  simple_cpu_tb.vvp
(+37 files in other folders)
