[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-cpu-assembler"
version = "2.0.0"
description = "Simple CPU Assembler - Convert assembly to Verilog/COE/MIF/HEX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Mercer"}
]
keywords = ["assembler", "cpu", "fpga", "verilog", "simple-cpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Assemblers",
    "Topic :: System :: Hardware",
]

[project.scripts]
sass = "assembler:main"

[project.urls]
Homepage = "https://github.com/AlexMercer12138/simple_cpu"
Documentation = "https://github.com/AlexMercer12138/simple_cpu#readme"

[tool.setuptools]
py-modules = ["assembler"]
